// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toHaveBeenCalledBefore fails when given first mock is called before multiple calls to second mock 1`] = `
"expect(received).not.toHaveBeenCalledBefore(expected)

Expected first mock to not have been called before, invocationCallOrder:
  [4000, 6000]
Received second mock with invocationCallOrder:
  [5000, 7000, 8000]"
`;

exports[`.not.toHaveBeenCalledBefore fails when given first mock is called before second mock 1`] = `
"expect(received).not.toHaveBeenCalledBefore(expected)

Expected first mock to not have been called before, invocationCallOrder:
  [4000]
Received second mock with invocationCallOrder:
  [5000]"
`;

exports[`.not.toHaveBeenCalledBefore fails when given first mock that has been called and a second mock that has not been called 1`] = `
"expect(received).not.toHaveBeenCalledBefore(expected)

Expected first mock to not have been called before, invocationCallOrder:
  [4000]
Received second mock with invocationCallOrder:
  []"
`;

exports[`.toHaveBeenCalledBefore fails when given a first mock has not been called 1`] = `
"expect(received).toHaveBeenCalledBefore(expected)

Expected first mock to have been called before, invocationCallOrder:
  []
Received second mock with invocationCallOrder:
  []"
`;

exports[`.toHaveBeenCalledBefore fails when given first mock is called after second mock 1`] = `
"expect(received).toHaveBeenCalledBefore(expected)

Expected first mock to have been called before, invocationCallOrder:
  [5000]
Received second mock with invocationCallOrder:
  [4000]"
`;

exports[`.toHaveBeenCalledBefore fails when given first mock is called after several calls to second mock 1`] = `
"expect(received).toHaveBeenCalledBefore(expected)

Expected first mock to have been called before, invocationCallOrder:
  [5000, 6000, 7000]
Received second mock with invocationCallOrder:
  [4000]"
`;
